Update index.html with CSS

--- a/index.html
+++ b/index.html
@@ -4,8 +4,72 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Renewable Energy Information</title>
+  <style>
+    /* CSS styles */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+      background-color: #333;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    nav ul li {
+      display: inline;
+    }
+
+    nav ul li a {
+      display: inline-block;
+      padding: 10px 20px;
+      text-decoration: none;
+      color: #fff;
+    }
+
+    nav ul li a:hover {
+      background-color: #555;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    section {
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      color: #428bca;
+    }
+
+    p {
+      line-height: 1.5;
+    }
+
+    button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      background-color: #428bca;
+      color: #fff;
+      cursor: pointer;
+      transition: box-shadow 0.3s ease;
+    }
+
+    button:hover {
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    }
+  </style>
 </head>
 <body>
+  <!-- Main navigation -->
   <nav>
     <ul>
       <li><a href="#introduction">Introduction</a></li>
@@ -18,42 +82,82 @@
     </ul>
   </nav>
 
+  <!-- Main content -->
   <main>
+    <!-- Introduction section -->
     <section id="introduction">
       <h2>Introduction</h2>
-      <p>Introduction content goes here...</p>
+      <p>Renewable energy is energy that is collected from renewable resources, which are naturally replenished on a human timescale, such as sunlight, wind, rain, tides, waves, and geothermal heat. Renewable energy often provides energy in four important areas: electricity generation, air and water heating/cooling, transportation, and rural (off-grid) energy services.</p>
     </section>
 
+    <!-- Types of Renewable Energy section -->
     <section id="types">
       <h2>Types of Renewable Energy</h2>
-      <p>Types of Renewable Energy content goes here...</p>
+      <p>There are several types of renewable energy sources, including:</p>
+      <ul>
+        <li><button type="button">Solar Power</button></li>
+        <li><button type="button">Wind Power</button></li>
+        <li><button type="button">Hydroelectric Power</button></li>
+        <li><button type="button">Geothermal Energy</button></li>
+        <li><button type="button">Biomass Energy</button></li>
+      </ul>
     </section>
 
+    <!-- Benefits section -->
     <section id="benefits">
       <h2>Benefits</h2>
-      <p>Benefits content goes here...</p>
+      <p>The use of renewable energy has many benefits, including:</p>
+      <ul>
+        <li><button type="button">Reduction of greenhouse gas emissions</button></li>
+        <li><button type="button">Energy independence</button></li>
+        <li><button type="button">Job creation</button></li>
+        <li><button type="button">Improved public health</button></li>
+        <li><button type="button">Economic growth and stability</button></li>
+      </ul>
     </section>
 
+    <!-- Challenges and Opportunities section -->
     <section id="challenges">
       <h2>Challenges and Opportunities</h2>
-      <p>Challenges and Opportunities content goes here...</p>
+      <p>While renewable energy offers many benefits, there are also challenges and opportunities associated with its implementation, such as:</p>
+      <ul>
+        <li><button type="button">Intermittency</button></li>
+        <li><button type="button">Storage and grid integration</button></li>
+        <li><button type="button">Initial costs</button></li>
+        <li><button type="button">Policy and regulatory barriers</button></li>
+        <li><button type="button">Technological innovation</button></li>
+      </ul>
     </section>
 
+    <!-- Case Studies section -->
     <section id="casestudies">
       <h2>Case Studies</h2>
-      <p>Case Studies content goes here...</p>
+      <p>Case studies provide real-world examples of successful renewable energy projects and initiatives. These projects demonstrate the feasibility and benefits of renewable energy adoption in various contexts, from small-scale community projects to large-scale utility installations.</p>
     </section>
 
+    <!-- Government Policies section -->
     <section id="policies">
       <h2>Government Policies</h2>
-      <p>Government Policies content goes here...</p>
+      <p>Government policies play a crucial role in promoting the adoption of renewable energy technologies. These policies include:</p>
+      <ul>
+        <li><button type="button">Subsidies and incentives</button></li>
+        <li><button type="button">Renewable energy targets</button></li>
+        <li><button type="button">Feed-in tariffs</button></li>
+        <li><button type="button">Tax credits</button></li>
+        <li><button type="button">Regulatory frameworks</button></li>
+      </ul>
     </section>
 
+    <!-- Future Outlook section -->
     <section id="future">
       <h2>Future Outlook</h2>
-      <p>Future Outlook content goes here...</p>
+      <p>The future of renewable energy looks promising, with continued technological advancements, cost reductions, and increasing global awareness of the need for sustainable energy solutions. However, addressing challenges such as intermittency, storage, and grid integration will be crucial for maximizing the potential of renewable energy in the years to come.</p>
     </section>
   </main>
 
+  <script>
+    /* JavaScript code */
+    /* Add your JavaScript code here */
+  </script>
 </body>
 </html>
