Update index.html with Sodium-Alginate

--- a/index.html
+++ b/index.html
@@ -3,161 +3,133 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Renewable Energy Information</title>
+  <title>Sodium Alginate Research Project</title>
   <style>
     /* CSS styles */
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
+      background-color: #f7f7f7;
       color: #333;
       margin: 0;
       padding: 0;
     }
 
-    nav ul {
-      list-style-type: none;
-      padding: 0;
-      background-color: #333;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    nav ul li {
-      display: inline;
-    }
-
-    nav ul li a {
-      display: inline-block;
-      padding: 10px 20px;
-      text-decoration: none;
+    header {
+      background-color: #428bca;
       color: #fff;
+      text-align: center;
+      padding: 20px 0;
     }
 
-    nav ul li a:hover {
-      background-color: #555;
-    }
-
-    main {
-      padding: 20px;
-    }
-
-    section {
-      margin-bottom: 30px;
-    }
-
-    h2 {
+    h1, h2, h3 {
       color: #428bca;
     }
 
-    p {
-      line-height: 1.5;
-    }
-
-    button {
-      padding: 10px 20px;
-      border: none;
+    .container {
+      width: 80%;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #fff;
       border-radius: 5px;
-      background-color: #428bca;
-      color: #fff;
-      cursor: pointer;
-      transition: box-shadow 0.3s ease;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     }
 
-    button:hover {
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    .section {
+      margin-bottom: 30px;
+    }
+
+    .section-header {
+      margin-bottom: 10px;
+    }
+
+    .section-content {
+      margin-left: 20px;
+    }
+
+    footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 20px 0;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+
+    footer p {
+      margin: 0;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 5px;
+      margin-bottom: 10px;
+    }
+
+    .graph-container {
+      text-align: center;
+    }
+
+    .graph {
+      max-width: 80%;
+      margin: 0 auto;
     }
   </style>
 </head>
 <body>
-  <!-- Main navigation -->
-  <nav>
-    <ul>
-      <li><a href="#introduction">Introduction</a></li>
-      <li><a href="#types">Types of Renewable Energy</a></li>
-      <li><a href="#benefits">Benefits</a></li>
-      <li><a href="#challenges">Challenges and Opportunities</a></li>
-      <li><a href="#casestudies">Case Studies</a></li>
-      <li><a href="#policies">Government Policies</a></li>
-      <li><a href="#future">Future Outlook</a></li>
-    </ul>
-  </nav>
+  <header>
+    <h1>Sodium Alginate Research Project</h1>
+  </header>
 
-  <!-- Main content -->
-  <main>
-    <!-- Introduction section -->
-    <section id="introduction">
-      <h2>Introduction</h2>
-      <p>Renewable energy is energy that is collected from renewable resources, which are naturally replenished on a human timescale, such as sunlight, wind, rain, tides, waves, and geothermal heat. Renewable energy often provides energy in four important areas: electricity generation, air and water heating/cooling, transportation, and rural (off-grid) energy services.</p>
-    </section>
+  <div class="container">
+    <div class="section">
+      <h2 class="section-header">What is Sodium Alginate?</h2>
+      <div class="section-content">
+        <p>Sodium alginate is a natural polysaccharide extracted from brown seaweed. It is commonly used as a thickener, stabilizer, and gelling agent in various industries, including food, pharmaceuticals, and textiles.</p>
+      </div>
+    </div>
 
-    <!-- Types of Renewable Energy section -->
-    <section id="types">
-      <h2>Types of Renewable Energy</h2>
-      <p>There are several types of renewable energy sources, including:</p>
-      <ul>
-        <li><button type="button">Solar Power</button></li>
-        <li><button type="button">Wind Power</button></li>
-        <li><button type="button">Hydroelectric Power</button></li>
-        <li><button type="button">Geothermal Energy</button></li>
-        <li><button type="button">Biomass Energy</button></li>
-      </ul>
-    </section>
+    <div class="section">
+      <h2 class="section-header">Applications</h2>
+      <div class="section-content">
+        <p>Sodium alginate has numerous applications:</p>
+        <ul>
+          <li>Food industry: Used as a thickening and gelling agent in products such as ice cream, jelly, and salad dressings.</li>
+          <li>Pharmaceuticals: Used as a binder in tablets and capsules.</li>
+          <li>Textiles: Used for textile printing and as a thickener in textile dyes.</li>
+          <li>Cosmetics: Used in the formulation of creams, lotions, and masks.</li>
+          <li>Dental impressions: Used as a material for dental molds.</li>
+        </ul>
+      </div>
+    </div>
 
-    <!-- Benefits section -->
-    <section id="benefits">
-      <h2>Benefits</h2>
-      <p>The use of renewable energy has many benefits, including:</p>
-      <ul>
-        <li><button type="button">Reduction of greenhouse gas emissions</button></li>
-        <li><button type="button">Energy independence</button></li>
-        <li><button type="button">Job creation</button></li>
-        <li><button type="button">Improved public health</button></li>
-        <li><button type="button">Economic growth and stability</button></li>
-      </ul>
-    </section>
+    <div class="section">
+      <h2 class="section-header">Safety</h2>
+      <div class="section-content">
+        <p>Sodium alginate is generally recognized as safe (GRAS) by regulatory authorities when used in accordance with good manufacturing practices. However, individuals with a known allergy to seaweed should avoid products containing sodium alginate.</p>
+      </div>
+    </div>
 
-    <!-- Challenges and Opportunities section -->
-    <section id="challenges">
-      <h2>Challenges and Opportunities</h2>
-      <p>While renewable energy offers many benefits, there are also challenges and opportunities associated with its implementation, such as:</p>
-      <ul>
-        <li><button type="button">Intermittency</button></li>
-        <li><button type="button">Storage and grid integration</button></li>
-        <li><button type="button">Initial costs</button></li>
-        <li><button type="button">Policy and regulatory barriers</button></li>
-        <li><button type="button">Technological innovation</button></li>
-      </ul>
-    </section>
+    <div class="section">
+      <h2 class="section-header">Experimental Results</h2>
+      <div class="section-content">
+        <p>The experiment investigated the effects of sodium alginate on plant growth and soil moisture retention. Here are the key findings:</p>
+        <ul>
+          <li>Higher concentrations of sodium alginate hindered plant growth due to seed over-hydration.</li>
+          <li>Medium-low concentrations of sodium alginate (5g) showed the most optimal results, promoting enhanced growth and reducing water demand.</li>
+          <li>Control pots without sodium alginate exhibited moderate growth, serving as a baseline for comparison.</li>
+        </ul>
+        <div class="graph-container">
+          <h3>Graph: Sodium Alginate Concentration vs. Plant Growth</h3>
+          <img class="graph" src="graph.png" alt="Graph showing the relationship between sodium alginate concentration and plant growth">
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <!-- Case Studies section -->
-    <section id="casestudies">
-      <h2>Case Studies</h2>
-      <p>Case studies provide real-world examples of successful renewable energy projects and initiatives. These projects demonstrate the feasibility and benefits of renewable energy adoption in various contexts, from small-scale community projects to large-scale utility installations.</p>
-    </section>
-
-    <!-- Government Policies section -->
-    <section id="policies">
-      <h2>Government Policies</h2>
-      <p>Government policies play a crucial role in promoting the adoption of renewable energy technologies. These policies include:</p>
-      <ul>
-        <li><button type="button">Subsidies and incentives</button></li>
-        <li><button type="button">Renewable energy targets</button></li>
-        <li><button type="button">Feed-in tariffs</button></li>
-        <li><button type="button">Tax credits</button></li>
-        <li><button type="button">Regulatory frameworks</button></li>
-      </ul>
-    </section>
-
-    <!-- Future Outlook section -->
-    <section id="future">
-      <h2>Future Outlook</h2>
-      <p>The future of renewable energy looks promising, with continued technological advancements, cost reductions, and increasing global awareness of the need for sustainable energy solutions. However, addressing challenges such as intermittency, storage, and grid integration will be crucial for maximizing the potential of renewable energy in the years to come.</p>
-    </section>
-  </main>
-
-  <script>
-    /* JavaScript code */
-    /* Add your JavaScript code here */
-  </script>
+  <footer>
+    <p>&copy; 2024 Sodium Alginate Research Project. All rights reserved.</p>
+  </footer>
 </body>
 </html>
