Update index.html with new graphs

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
         </ul>
         <div class="graph-container">
           <h3>Graph: Sodium Alginate Concentration vs. Plant Growth</h3>
-          <img class="graph" src="graph.png" alt="Graph showing the relationship between sodium alginate concentration and plant growth">
+          <img class="graph" src="graphaveragesoilmoisturestem2023.png" alt="Graph showing the relationship between sodium alginate concentration and soil moisture">
+          <img class="graph" src="graphaverageplantheightstem2023.png" alt="Graph showing the relationship between sodium alginate concentration and plant height">
         </div>
       </div>
     </div>
