Update index.html with graphs updated

--- a/index.html
+++ b/index.html
@@ -121,9 +121,12 @@
           <li>Control pots without sodium alginate exhibited moderate growth, serving as a baseline for comparison.</li>
         </ul>
         <div class="graph-container">
-          <h3>Graph: Sodium Alginate Concentration vs. Plant Growth</h3>
-          <img class="graph" src="graphaveragesoilmoisturestem2023.png" alt="Graph showing the relationship between sodium alginate concentration and soil moisture">
-          <img class="graph" src="graphaverageplantheightstem2023.png" alt="Graph showing the relationship between sodium alginate concentration and plant height">
+          <h3>Graph: Average Soil Moisture</h3>
+          <img class="graph" src="graphaveragesoilmoisturestem2023.png" alt="Graph showing the relationship between sodium alginate concentration and average soil moisture">
+        </div>
+        <div class="graph-container">
+          <h3>Graph: Average Plant Height</h3>
+          <img class="graph" src="graphaverageplantheightstem2023.png" alt="Graph showing the relationship between sodium alginate concentration and average plant height">
         </div>
       </div>
     </div>
